# simple_window

./: .gitignore  CMakeLists.txt  README.md  animation_of_color_arrays.cpp  animation_of_color_arrays.hpp  simple_window.cpp  simple_window.hpp  test.cpp
